# storlane-fc

./: .clang-format  .gitignore  .gitmodules  AGENTS.md  CMakeLists.txt  LICENSE  README.md  fcl.cpp
examples/app/: CMakeLists.txt  application_builder.cpp  application_lifecycle.cpp  daemon_runner.cpp  exception_logging.cpp
libraries/app/: CMakeLists.txt  README.md  application.cpp  application_builder.cpp  application_shell.cpp  daemon.cpp  diagnostics.cpp  events.cpp  plugin.cpp  plugin_context.cpp  plugin_registry.cpp  ports.cpp  runner.cpp  signals.cpp
libraries/app/include/fcl/app/: app.cppm  application.cppm  application_builder.cppm  application_shell.cppm  daemon.cppm  diagnostics.cppm  events.cppm  exceptions.cppm  plugin.cppm  plugin_context.cppm  plugin_registry.cppm  ports.cppm  runner.cppm  signals.cppm
libraries/core/: CMakeLists.txt  README.md  chrono.cpp  filesystem.cpp  git_revision.cpp.in  mock_time.cpp  string.cpp  time.cpp  uint128.cpp  utf8.cpp
libraries/core/include/fcl/core/: aligned.hpp  array.hpp  bitutil.hpp  chrono.cppm  filesystem.hpp  fixed_string.hpp  fwd.hpp  fwd_impl.hpp  git_revision.cppm  git_revision.hpp  macros.hpp  mock_time.hpp  mutex.hpp  safe.hpp  scoped_exit.hpp  string.cppm  string.hpp  time.hpp  type_name.cppm  uint128.cppm  uint128.hpp  utf8.cppm  utf8.hpp  utility.cppm  utility.hpp  version.cppm
libraries/core/tests/: test_escape_str.cpp  test_scoped_exit.cpp
libraries/crypto/: CMakeLists.txt  README.md  _digest_common.cpp  _digest_common.hpp  _elliptic_impl_priv.hpp  _evp_digest.hpp  aes.cpp  aes256_gcm.cpp  base58.cpp  bigint.cpp  blake2.cpp  bls_private_key.cpp  bls_public_key.cpp  bls_signature.cpp  bls_utils.cpp  city.cpp  crc.cpp  elliptic_common.cpp  elliptic_impl_priv.cpp  elliptic_r1.cpp  elliptic_secp256k1.cpp  elliptic_webauthn.cpp  hex.cpp  k1_recover.cpp  kdf.cpp  modular_arithmetic.cpp  private_key.cpp  public_key.cpp  rand.cpp  random.cpp  ripemd160.cpp  sha1.cpp  sha224.cpp  sha256.cpp  sha3.cpp  sha512.cpp  signature.cpp  types.cpp
libraries/crypto/include/fcl/crypto/: aes.cppm  aes.hpp  aes256_gcm.cppm  base58.cppm  base58.hpp  base64.cppm  base64.hpp  bigint.cppm  bigint.hpp  blake2.cppm  blake2.hpp  bls_common.cppm  bls_common.hpp  bls_private_key.cppm  bls_private_key.hpp  bls_public_key.cppm  bls_public_key.hpp  bls_signature.cppm  bls_signature.hpp  bls_utils.cppm  bls_utils.hpp  city.cppm  city.hpp  common.cppm  common.hpp  elliptic.cppm  elliptic.hpp  elliptic_r1.cppm  elliptic_r1.hpp  elliptic_webauthn.cppm  elliptic_webauthn.hpp  hex.cppm  hex.hpp  hmac.cppm  hmac.hpp  k1_recover.cppm  k1_recover.hpp  kdf.cppm  modular_arithmetic.cppm  modular_arithmetic.hpp  (+26 more)
libraries/crypto/tests/: test_base64.cpp  test_blake2.cpp  test_bls.cpp  test_bls_legacy.cpp  test_cypher_suites.cpp  test_hash_functions.cpp  test_k1_recover.cpp  test_modular_arithmetic.cpp  test_utils.hpp  test_webauthn.cpp
libraries/exception/: CMakeLists.txt  README.md  exception.cpp
libraries/exception/include/fcl/exception/: exception.cppm  exception.hpp  exceptions.cppm  macros.hpp
libraries/http/: CMakeLists.txt  README.md  base_url.cpp  client.cpp  connection.cpp  middleware.cpp  route_context.cpp  router.cpp  server.cpp  target.cpp
libraries/http/include/fcl/http/: api.cppm  base_url.cppm  client.cppm  connection.cppm  exceptions.cppm  http.cppm  middleware.cppm  route_context.cppm  router.cppm  server.cppm  target.cppm  types.cppm
libraries/io/: CMakeLists.txt  datastream.cpp  fstream.cpp  varint.cpp
libraries/io/include/fcl/io/: datastream.hpp  fstream.hpp  (+2 more)
libraries/json/: CMakeLists.txt  README.md  json.cpp
libraries/json/tests/: test_json.cpp
libraries/log/: CMakeLists.txt  README.md  appender.cpp  console_appender.cpp  console_defines.h  log_message.cpp  logger.cpp  logger_config.cpp  record.cpp
libraries/p2p/: CMakeLists.txt  README.md  codec.cpp  errors.cpp  identity.cpp  node.cpp  options.cpp  peer_store.cpp  relay.cpp  scoring.cpp  session.cpp
libraries/program_options/: CMakeLists.txt  README.md  program_options.cpp
libraries/quic/: CMakeLists.txt  README.md  connection.cpp  connector.cpp  endpoint.cpp  errors.cpp  framed_stream.cpp  listener.cpp  options.cpp  quic_engine.cpp  quic_engine.hpp  runtime.cpp  security.cpp  stream.cpp  wrapper_handles.hpp
libraries/raw/: CMakeLists.txt  README.md  datastream.cpp  raw.cpp  varint.cpp
libraries/raw/tests/: test_raw.cpp
libraries/variant/: CMakeLists.txt  README.md  variant.cpp  variant_chrono.cpp  variant_format.cpp  variant_object.cpp
libraries/variant/tests/: test_static_variant.cpp  test_variant.cpp  test_variant_dynamic_bitset.cpp  test_variant_estimated_size.cpp
libraries/websocket/: CMakeLists.txt  README.md  client.cpp  connection.cpp
tests/: CMakeLists.txt
tests/api/: api_module_smoke_tests.cpp  api_tests.cpp
tests/app/: app_tests.cpp
tests/asio/: task_scheduler_tests.cpp
tests/config/: config_tests.cpp
tests/core/: test_chrono.cpp  test_escape_str.cpp
tests/crypto/: test_base64.cpp  test_blake2.cpp  test_bls.cpp  test_bls_legacy.cpp  test_cypher_suites.cpp  test_hash_functions.cpp  test_k1_recover.cpp  test_modular_arithmetic.cpp  test_symmetric.cpp  test_utils.hpp  test_webauthn.cpp
tests/env/: env_tests.cpp
tests/exception/: exception_tests.cpp
tests/http_websocket/: network_tests.cpp
tests/json/: test_json.cpp
tests/log/: log_tests.cpp
tests/package_all_missing_dependency/: CMakeLists.txt  expect_configure_failure.cmake
tests/package_api_lightweight/: CMakeLists.txt  main.cpp
tests/package_consumer/: CMakeLists.txt  main.cpp
tests/package_core_lightweight/: CMakeLists.txt  main.cpp
tests/package_env_lightweight/: CMakeLists.txt  main.cpp
tests/program_options/: program_options_tests.cpp
tests/quic_p2p/: p2p_tests.cpp  quic_tests.cpp
tests/raw/: test_raw.cpp
tests/schema/: schema_tests.cpp
tests/tui/: tui_tests.cpp
tests/unit/: main.cpp
tests/variant/: test_static_variant.cpp  test_variant.cpp  test_variant_dynamic_bitset.cpp  test_variant_estimated_size.cpp
tests/yaml/: yaml_tests.cpp
(+205 files in other folders)
